fix sidebar issue on iphone

--- a/src/common.css
+++ b/src/common.css
@@ -7,10 +7,10 @@
 } 
 
 #sidebar {
-    margin-left: -100%;
+    margin-left: -200%;
     min-width: 100%;
     min-height: 100vh;
-    transition: all 0.3s;
+    transition: all 0.7s;
     z-index: 9999;
     position: absolute;
     top:0;
